--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="module" src="https://mozilla.github.io/pdf.js/build/pdf.mjs"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
